infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway-gateway
  namespace: envoy-gateway-system   # ← namespace do Envoy Gateway
spec:
  gatewayClassName: eg              # ← referencia a GatewayClass acima
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            senai/allowed: "true"   # ← isso não muda
